--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <div class="container bg-dark text-light " id="card">
     <div class="row justify-content-center">
-        <b><h3>Team_MOSFET</h3></b>
+        <b><h3>Team_Abdullah</h3></b>
     </div>
   </div>
   <br>
