modified html with blog post

--- a/index.html
+++ b/index.html
@@ -169,12 +169,53 @@
 
   <!--======================picture cotents ends here============-->
   <br>
+
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h2>Welcome to My Blog</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <p>Maecenas sed diam eget risus varius blandit sit amet non Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, asperiores molestias. Asperiores accusamus odio nihil laudantium commodi ea ullam optio.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, totam. Quibusdam, suscipit recusandae? Dolore deleniti fugit odit consequuntur pariatur ratione corporis voluptatem reiciendis repellat, blanditiis a, maxime, asperiores sint itaque.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Placeholder image" class="img-fluid">
+      </div>
+    </div>
+    <hr>
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Placeholder image" class="img-fluid">
+      </div>
+      <div class="col-md-8">
+        <h3>Blog Post Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <a href="#" class="btn btn-primary">Read More</a>
+      </div>
+    </div>
+    <hr>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h3>Blog Post Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <a href="#" class="btn btn-primary">Read More</a>
+      </div>
+      <div class="col-md-4">
+        <img src="https://via.placeholder.com/150" alt="Placeholder image" class="img-fluid">
+      </div>
+    </div>
+  </div>
+  
+
+
+
   <!--============card code starts here=============-->
   
 
   <div class="container bg-dark text-light " id="card">
     <div class="row justify-content-center">
-        <b><h3>Team_MOSFET1</h3></b>
+        <b><h3>Team_MOSFET</h3></b>
     </div>
   </div>
   <br>
