--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
   </div>
 
   <!--======================picture cotents ends here============-->
+  <!-- rezaul bro code starts here -->
   <br>
 
   <div class="container mt-4">
@@ -208,7 +209,7 @@
   </div>
   
 
-
+  <!-- rezaul bro code ends here -->
 
   <!--============card code starts here=============-->
   
@@ -341,7 +342,7 @@
    </div>
   </div>
 
-  <!--============card code starts here=============-->
+  <!--============card code endss here=============-->
 <br>
 <!-- jkdsssssssssssssssssssssssssss -->
 <div class="container text-center text-white" style="background-color: #45637d;">
