--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
   </div>
   
   <br><br>
-  <!--====================carousel ends here ======================-->
+  <!--============================carousel ends here ======================-->
 
 
-  <!--=================table code starts here===============-->
+  <!--=============================table code starts here===============-->
   
   <table class="container table table-striped">
     <thead>
@@ -168,7 +168,7 @@
   </div>
 
   <!--======================picture cotents ends here============-->
-  <!-- rezaul bro code starts here -->
+  <!-- ===========rezaul bro code starts here=========== -->
   <br>
 
   <div class="container mt-4">
@@ -209,7 +209,7 @@
   </div>
   
 
-  <!-- rezaul bro code ends here -->
+  <!-- ==============rezaul bro code ends here================ -->
 
   <!--============card code starts here=============-->
   
